# url-shortener

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: commands.rs  errors.rs  main.rs  queries.rs  service.rs  structs.rs
src/api/: mod.rs
