[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
nanoid = "0.4.0"
axum = { version = "0.7.7" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }
